refactor: adiciona moelhorias